--- a/Main.storyboard
+++ b/Main.storyboard
@@ -122,7 +122,6 @@
         <!--Profile-->
         <scene sceneID="gAE-UB-3Wh">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pm8-6A-VCu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController title="Profile" id="YR1-R3-D2d" customClass="ProfileViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EUA-we-6h5">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
@@ -187,6 +186,7 @@
                     <tabBarItem key="tabBarItem" title="" image="tab_profile_active" id="cUF-XA-VhV"/>
                     <navigationItem key="navigationItem" id="hmg-he-kzx"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pm8-6A-VCu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="27" y="718"/>
         </scene>
@@ -226,16 +226,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Rvc-6q-ve3">
-                                <rect key="frame" x="177" y="418" width="60" height="60"/>
+                                <rect key="frame" x="157.5" y="418" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Hc9-v8-rWS"/>
                                     <constraint firstAttribute="width" constant="60" id="dnS-4h-fD8"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lmw-ak-vN8">
-                                <rect key="frame" x="16" y="724" width="382" height="48"/>
+                                <rect key="frame" x="16" y="724" width="343" height="48"/>
                                 <color key="backgroundColor" name="YPWhite"/>
                                 <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="OMg-jF-GnA"/>
+                                    <constraint firstAttribute="width" constant="343" id="bw9-hf-c6y"/>
                                     <constraint firstAttribute="height" constant="48" id="sVv-3i-m5g"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
