--- a/Main.storyboard
+++ b/Main.storyboard
@@ -226,14 +226,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Rvc-6q-ve3">
-                                <rect key="frame" x="157.5" y="418" width="60" height="60"/>
+                                <rect key="frame" x="177" y="418" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Hc9-v8-rWS"/>
                                     <constraint firstAttribute="width" constant="60" id="dnS-4h-fD8"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lmw-ak-vN8">
-                                <rect key="frame" x="16" y="724" width="343" height="48"/>
+                                <rect key="frame" x="16" y="758" width="382" height="48"/>
                                 <color key="backgroundColor" name="YPWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="343" id="OMg-jF-GnA"/>
@@ -259,9 +259,9 @@
                         <viewLayoutGuide key="safeArea" id="JCS-eq-lHO"/>
                         <color key="backgroundColor" name="YPBlack"/>
                         <constraints>
+                            <constraint firstItem="JCS-eq-lHO" firstAttribute="bottom" secondItem="lmw-ak-vN8" secondAttribute="bottom" constant="90" id="3Jx-RN-sjN"/>
                             <constraint firstItem="Rvc-6q-ve3" firstAttribute="centerX" secondItem="8qx-He-W6r" secondAttribute="centerX" id="Acl-Yj-UV3"/>
                             <constraint firstItem="Rvc-6q-ve3" firstAttribute="centerY" secondItem="8qx-He-W6r" secondAttribute="centerY" id="E1p-Ie-vqL"/>
-                            <constraint firstItem="JCS-eq-lHO" firstAttribute="bottom" secondItem="lmw-ak-vN8" secondAttribute="bottom" constant="124" id="XcG-V4-Wxq"/>
                             <constraint firstItem="JCS-eq-lHO" firstAttribute="trailing" secondItem="lmw-ak-vN8" secondAttribute="trailing" constant="16" id="ioD-8N-Bbw"/>
                             <constraint firstItem="lmw-ak-vN8" firstAttribute="leading" secondItem="JCS-eq-lHO" secondAttribute="leading" constant="16" id="um1-av-mg5"/>
                         </constraints>
